--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-toast": "^1.1.4",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
+    "firebase": "^11.0.1",
     "lucide-react": "^0.244.0",
     "next": "13.4.4",
     "next-themes": "^0.2.1",
